--- a/portfolio.html
+++ b/portfolio.html
@@ -11,123 +11,158 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a href="" class="header-logo link">Web<span class="header-logo-studio">Studio</span> </a>
-        <ul class="header-list list">
-          <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-          <li class="header-item">
-            <a href="./portfolio.html" class="header-link link current">Портфолио</a>
+      <div class="header-content container">
+        <nav class="header-nav">
+          <a href="" class="header-logo link">Web<span class="header-logo-studio">Studio</span> </a>
+          <ul class="header-list list">
+            <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+            <li class="header-item">
+              <a href="./portfolio.html" class="header-link link current">Портфолио</a>
+            </li>
+            <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
           </li>
-          <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+          <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
-      <section class="projects">
-        <h1 class="projects-title" hidden>Наши работы</h1>
-        <ul class="projects-list list">
-          <li class="projects-item">
-            <button type="button" class="projects-btn">Все</button>
-          </li>
-          <li class="projects-item">
-            <button type="button" class="projects-btn">Веб-сайты</button>
-          </li>
-          <li class="projects-item">
-            <button type="button" class="projects-btn">Приложения</button>
-          </li>
-          <li class="projects-item"><button type="button" class="projects-btn">Дизайн</button></li>
-          <li class="projects-item">
-            <button type="button" class="projects-btn">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct1.jpg" alt="Проект1" width="370" />
-              <h2 class="portfolio-name">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct2.jpg" alt="Проект2" width="370" />
-              <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct3.jpg" alt="Проект3" width="370" />
-              <h2 class="portfolio-name">Ресторан Seafood</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct4.jpg" alt="Проект4" width="370" />
-              <h2 class="portfolio-name">Проект Prime</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct5.jpg" alt="Проект5" width="370" />
-              <h2 class="portfolio-name">Проект Boxes</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct6.jpg" alt="Проект6" width="370" />
-              <h2 class="portfolio-name">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct7.jpg" alt="Проект7" width="370" />
-              <h2 class="portfolio-name">Издание Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct8.jpg" alt="Проект8" width="370" />
-              <h2 class="portfolio-name">Проект LAB</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="portfolio-item">
-            <a href="" class="portfolio-link link">
-              <img src="./portfolio/pjct9.jpg" alt="Проект9" width="370" />
-              <h2 class="portfolio-name">Growing Business</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
-          </li>
-        </ul>
+      <section class="projects section">
+        <div class="container">
+          <h1 class="projects-title" hidden>Наши работы</h1>
+          <ul class="projects-list list">
+            <li class="projects-item">
+              <button type="button" class="projects-btn">Все</button>
+            </li>
+            <li class="projects-item">
+              <button type="button" class="projects-btn">Веб-сайты</button>
+            </li>
+            <li class="projects-item">
+              <button type="button" class="projects-btn">Приложения</button>
+            </li>
+            <li class="projects-item">
+              <button type="button" class="projects-btn">Дизайн</button>
+            </li>
+            <li class="projects-item">
+              <button type="button" class="projects-btn">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct1.jpg" alt="Проект1" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct2.jpg" alt="Проект2" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct3.jpg" alt="Проект3" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct4.jpg" alt="Проект4" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Проект Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct5.jpg" alt="Проект5" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Проект Boxes</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct6.jpg" alt="Проект6" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct7.jpg" alt="Проект7" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Издание Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct8.jpg" alt="Проект8" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Проект LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="portfolio-link link">
+                <img src="./portfolio/pjct9.jpg" alt="Проект9" width="370" />
+                <div class="portfolio-post">
+                  <h2 class="portfolio-name">Growing Business</h2>
+                  <p class="portfolio-text">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
-      <address class="address">
-        <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a href="mailto:info@devstudio.com" class="footer-mail link">info@example.com</a>
-          </li>
-          <li class="footer-item">
-            <a href="tel:+380961111111" class="footer-tel link">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
+        <address class="address">
+          <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a href="mailto:info@devstudio.com" class="footer-mail link">info@example.com</a>
+            </li>
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="footer-tel link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
