--- a/portfolio.html
+++ b/portfolio.html
@@ -154,11 +154,11 @@
         <address class="address">
           <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
           <ul class="footer-list list">
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-mail link">info@example.com</a>
+            <li class="footer-mail">
+              <a href="mailto:info@devstudio.com" class="mail link">info@example.com</a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-tel link">+38 099 111 11 11</a>
+            <li class="footer-tel">
+              <a href="tel:+380961111111" class="tel link">+38 099 111 11 11</a>
             </li>
           </ul>
         </address>
